--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   },
   "devDependencies": {
     "@types/express": "^5.0.1",
+    "@types/fluent-ffmpeg": "^2.1.27",
     "@types/node": "^22.14.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
